--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.913.0",
+    "@aws-sdk/credential-providers": "^3.913.0",
+    "@aws-sdk/lib-dynamodb": "^3.913.0",
     "next": "15.5.5",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
