Integrate Cognito Identity Pool (#3)

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,11 @@
+# aws
+NEXT_PUBLIC_AWS_REGION=
+NEXT_PUBLIC_COGNITO_USER_POOL_ID=
+NEXT_PUBLIC_COGNITO_IDENTITY_POOL_ID=
+AWS_COGNITO_APP_CLIENT_ID=
+AWS_COGNITO_APP_CLIENT_SECRET=
+AWS_COGNITO_ISSUER=
+NEXT_PUBLIC_AWS_COMMUNITY_DAY_DATA_DYNAMODB_TABLE_NAME=
+
+# auth.js
 AUTH_SECRET=
-AUTH_COGNITO_CLIENT_ID=
-AUTH_COGNITO_CLIENT_SECRET=
-AUTH_COGNITO_ISSUER=
